--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
   },
   "dependencies": {
     "@mantine/core": "^4.2.5",
+    "@mantine/form": "^4.2.5",
     "@mantine/hooks": "^4.2.5",
     "@tauri-apps/api": "^1.0.0-rc.5",
+    "ahooks": "^3.3.12",
+    "i18next": "^21.8.3",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.9",
     "react-router-dom": "6",
     "tabler-icons-react": "^1.48.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.0.0-rc.10",
+    "@types/node": "^17.0.34",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
