--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next": "^21.8.3",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
+    "nanoid": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.9",
